--- a/projects/trainworks.html
+++ b/projects/trainworks.html
@@ -5,50 +5,50 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="../_app/immutable/assets/3.CtlIlcSs.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/page.Cu6n9kxJ.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Cbtervo9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.BrCOhRZa.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/runtime.CzvSjtxP.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/paths.oexep01I.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index-client.C1WF9xyf.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.CLcFHmtk.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/render.ChEHKATr.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.D41xcpVt.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/props.D1vNGr5N.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.MeNWkCO5.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.MNyWq-Ha.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/legacy.CMMCVHVi.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/page.DbDgH_wg.js">
+		<link href="../_app/immutable/assets/3.BIfpdKxY.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/page.C1dY1V2D.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.Cd0xFoJ3.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.DCvLtosz.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/runtime.DhPanBSb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/paths.CoJuLDcB.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index-client.DWWDNZP_.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.CbL7yu_0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/render.oJxJNZLH.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.BoTh8Wgz.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/props.DrjrAg4Q.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.Ca0ETVeH.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.VDe-OOXI.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/legacy.Qo1N3MBP.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/page.B57NLFtW.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!----><header class="svelte-uhp1k9"><div><h1 class="title-global svelte-uhp1k9"><a href="../" class="svelte-uhp1k9">Jackson Levitt</a></h1> <nav class="svelte-uhp1k9"><ul class="svelte-uhp1k9"><li class="svelte-uhp1k9"><a href="../" class="svelte-uhp1k9">[About]</a></li> <li class="svelte-uhp1k9"><a href="../" class="svelte-uhp1k9">[Blog]</a></li> <li class="svelte-uhp1k9"><a href="../" class="svelte-uhp1k9">[Projects]</a></li> <li class="svelte-uhp1k9"><a href="../" class="svelte-uhp1k9">[Books]</a></li> <li class="svelte-uhp1k9"><a href="../" class="svelte-uhp1k9">[Stats]</a></li></ul></nav></div> <div><h1 class="title-event svelte-uhp1k9">      <span class="title-event-wrap svelte-uhp1k9">$Τ</span><a href="../" class="svelte-uhp1k9">ꝛ@ΤƎ</a><span class="title-event-wrap svelte-uhp1k9">𐤂𐍅</span></h1> <nav class="svelte-uhp1k9"><ul class="svelte-uhp1k9"><li class="svelte-uhp1k9"><a href="../" class="svelte-uhp1k9">[Home]</a></li> <li class="svelte-uhp1k9"><a href="../Resume 2024.pdf" class="svelte-uhp1k9">[Resume]</a></li> <li class="svelte-uhp1k9"><a href="https://github.com/crazyjackel" class="svelte-uhp1k9">[Github]</a></li> <li class="svelte-uhp1k9"><a href="https://www.linkedin.com/in/jackson-levitt-0abb66176/" class="svelte-uhp1k9">[LinkedIn]</a></li> <li class="svelte-uhp1k9"><a href="https://theuselessweb.com/" class="svelte-uhp1k9">[Random]</a></li></ul></nav></div></header><!----> <main id="content" tabindex="-1"><!----><article class="article svelte-rkvyh8"><!----><h2 class="article-author svelte-rkvyh8">Jackson Levitt</h2><!----> <!----><h1 class="article-title svelte-rkvyh8">Trainworks Reloaded</h1><!----> <!----><div slot="image"><img src="../Trainworks.png" alt="trainworks" class="svelte-28i0m9"></div><!----> <!----><div slot="content" class="content svelte-28i0m9"><p class="centered-button svelte-28i0m9"><a href="https://github.com/Monster-Train-2-Modding-Group/Trainworks-Reloaded" target="_blank" class="github-button svelte-28i0m9">View on GitHub</a></p> <p class="svelte-28i0m9"><a href="https://github.com/Monster-Train-2-Modding-Group/Trainworks-Reloaded" target="_blank" class="svelte-28i0m9">Trainworks Reloaded</a> is an advanced modding framework designed to facilitate the injection of custom game-specific
-				data into the video game: <a href="https://store.steampowered.com/app/2742830/Monster_Train_2/" target="_blank" class="svelte-28i0m9">Monster Train 2</a>. This framework streamlines the process of extending and modifying the game's core
-				functionality by leveraging a tailored <a href="https://json-schema.org/" target="_blank" class="svelte-28i0m9">JSON Schema</a> as a configuration medium, which is subsequently interpreted to construct a dependency injection
-				container using the widely adopted <a href="https://simpleinjector.org/" target="_blank" class="svelte-28i0m9">SimpleInjector</a> IoC (Inversion of Control)
-				library.</p> <p class="svelte-28i0m9">The JSON Schema defines a structured format for mod developers to describe and configure
+		<div style="display: contents"><!--[--><!--[--><!----><!----><header style="border-image: url('../Border.png') 11 repeat;" class="svelte-1u8aqj4"><div><h1 class="title-global svelte-1u8aqj4"><a href="../" class="svelte-1u8aqj4">Jackson Levitt</a></h1> <nav class="svelte-1u8aqj4"><ul class="svelte-1u8aqj4"><li class="svelte-1u8aqj4"><a href="../" class="svelte-1u8aqj4">[About]</a></li> <li class="svelte-1u8aqj4"><a href="../" class="svelte-1u8aqj4">[Blog]</a></li> <li class="svelte-1u8aqj4"><a href="../" class="svelte-1u8aqj4">[Projects]</a></li> <li class="svelte-1u8aqj4"><a href="../" class="svelte-1u8aqj4">[Books]</a></li> <li class="svelte-1u8aqj4"><a href="../" class="svelte-1u8aqj4">[Stats]</a></li></ul></nav></div> <div><h1 class="title-event svelte-1u8aqj4">      <span class="title-event-wrap svelte-1u8aqj4">$Τ</span><a href="../" class="svelte-1u8aqj4">ꝛ@ΤƎ</a><span class="title-event-wrap svelte-1u8aqj4">𐤂𐍅</span></h1> <nav class="svelte-1u8aqj4"><ul class="svelte-1u8aqj4"><li class="svelte-1u8aqj4"><a href="../" class="svelte-1u8aqj4">[Home]</a></li> <li class="svelte-1u8aqj4"><a href="../Resume 2024.pdf" class="svelte-1u8aqj4">[Resume]</a></li> <li class="svelte-1u8aqj4"><a href="https://github.com/crazyjackel" class="svelte-1u8aqj4">[Github]</a></li> <li class="svelte-1u8aqj4"><a href="https://www.linkedin.com/in/jackson-levitt-0abb66176/" class="svelte-1u8aqj4">[LinkedIn]</a></li> <li class="svelte-1u8aqj4"><a href="https://theuselessweb.com/" class="svelte-1u8aqj4">[Random]</a></li></ul></nav></div></header><!----> <main id="content" tabindex="-1"><!----><article class="article svelte-rkvyh8"><!----><h2 class="article-author svelte-rkvyh8">Jackson Levitt</h2><!----> <!----><h1 class="article-title svelte-rkvyh8">Trainworks Reloaded</h1><!----> <!----><div slot="image"><img src="../Trainworks.png" alt="trainworks" style="border-image: url('../Border.png') 11 repeat;" class="svelte-4dvsdl"></div><!----> <!----><div slot="content" class="content svelte-4dvsdl"><p class="centered-button svelte-4dvsdl"><a href="https://github.com/Monster-Train-2-Modding-Group/Trainworks-Reloaded" target="_blank" class="github-button svelte-4dvsdl">View on GitHub</a></p> <p class="svelte-4dvsdl"><a href="https://github.com/Monster-Train-2-Modding-Group/Trainworks-Reloaded" target="_blank" class="svelte-4dvsdl">Trainworks Reloaded</a> is an advanced modding framework designed to facilitate the injection of custom game-specific
+				data into the video game: <a href="https://store.steampowered.com/app/2742830/Monster_Train_2/" target="_blank" class="svelte-4dvsdl">Monster Train 2</a>. This framework streamlines the process of extending and modifying the game's core
+				functionality by leveraging a tailored <a href="https://json-schema.org/" target="_blank" class="svelte-4dvsdl">JSON Schema</a> as a configuration medium, which is subsequently interpreted to construct a dependency injection
+				container using the widely adopted <a href="https://simpleinjector.org/" target="_blank" class="svelte-4dvsdl">SimpleInjector</a> IoC (Inversion of Control)
+				library.</p> <p class="svelte-4dvsdl">The JSON Schema defines a structured format for mod developers to describe and configure
 				various game data objects. During the framework's data ingestion process, the JSON-defined
 				elements are parsed, instantiated, and mapped into modded registers. These registers serve
 				as intermediary data structures that hold onto mod data before it is finalized with all the
 				other registered data. Once done, data from the registers will be seemlessly integrated
-				through runtime patching mechanisms via the <a href="https://harmony.pardeike.net/" target="_blank" class="svelte-28i0m9">HarmonyX</a> library and <a href="https://bepinex.github.io/" target="_blank" class="svelte-28i0m9">BepInEx</a> Modloader. Together, they seemlessly
-				add our data in through the game's internal data constructs.</p> <p class="svelte-28i0m9">A notable feature of Trainworks Reloaded is its robust support for <a href="https://unity.com/" target="_blank" class="svelte-28i0m9">Unity</a>-specific constructs, such as GameObjects, Sprites, and related asset types. This
+				through runtime patching mechanisms via the <a href="https://harmony.pardeike.net/" target="_blank" class="svelte-4dvsdl">HarmonyX</a> library and <a href="https://bepinex.github.io/" target="_blank" class="svelte-4dvsdl">BepInEx</a> Modloader. Together, they seemlessly
+				add our data in through the game's internal data constructs.</p> <p class="svelte-4dvsdl">A notable feature of Trainworks Reloaded is its robust support for <a href="https://unity.com/" target="_blank" class="svelte-4dvsdl">Unity</a>-specific constructs, such as GameObjects, Sprites, and related asset types. This
 				capability empowers mod developers to construct complex game elements that can be seemlessly
 				referenced by various injection processes. Due to the Open-Nature of IOC and the ability for
 				secondary mods to add additional decorators, services, and constructs, other mods can easily
 				real in extra metadata from the JSON and provide cool integrations with minimal
-				incompatibility.</p> <p class="svelte-28i0m9">By abstracting much of the complexity typically associated with modding frameworks,
+				incompatibility.</p> <p class="svelte-4dvsdl">By abstracting much of the complexity typically associated with modding frameworks,
 				Trainworks Reloaded significantly lowers the entry barrier for developers seeking to create
 				immersive and innovative content for Monster Train 2. Its modular architecture, combined
 				with SimpleInjector's powerful dependency injection capabilities, ensures that modded
 				content can be efficiently managed, tested, and deployed without compromising game stability
-				or compatibility.</p> <p class="svelte-28i0m9">In essence, Trainworks Reloaded offers a comprehensive solution for modifying and extending
+				or compatibility.</p> <p class="svelte-4dvsdl">In essence, Trainworks Reloaded offers a comprehensive solution for modifying and extending
 				Monster Train 2, combining powerful data parsing techniques, runtime patching strategies,
-				and Unity asset management to enable a streamlined mod development workflow.</p> <p class="centered-button svelte-28i0m9"><a href="https://github.com/your-repo/trainworks-reloaded" target="_blank" class="github-button svelte-28i0m9">View on GitHub</a></p></div><!----></article><!----></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+				and Unity asset management to enable a streamlined mod development workflow.</p> <p class="centered-button svelte-4dvsdl"><a href="https://github.com/your-repo/trainworks-reloaded" target="_blank" class="github-button svelte-4dvsdl">View on GitHub</a></p></div><!----></article><!----></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_f8jrvf = {
+					__sveltekit_pek0lu = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -56,8 +56,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.Cbtervo9.js"),
-						import("../_app/immutable/entry/app.CLcFHmtk.js")
+						import("../_app/immutable/entry/start.Cd0xFoJ3.js"),
+						import("../_app/immutable/entry/app.CbL7yu_0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
